Language toggle QS
Toggle the primary default language

- Bring it to Oreo - LorDClockaN
- Bring it to Pie - ZeNiXxX
- Bring it to Q - spezi77

Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>
Change-Id: I8e7ec0337e8c5f02659a1bf6767187788cfb7318
Signed-off-by: blinoff82 <blinov.in@gmail.com>
Signed-off-by: DennySPb <dennyspb@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/packages/SystemUI/res/values/spark_strings.xml
+++ b/packages/SystemUI/res/values/spark_strings.xml
@@ -167,4 +167,8 @@
     <string name="dlg_ok">@android:string/ok</string>
     <string name="dlg_cancel">@android:string/cancel</string>
     <string name="guts_force_close_app">Close App</string>
+
+    <!-- Language toggle tile -->
+    <string name="quick_settings_locale_label">Language</string>
+    <string name="quick_settings_locale_more_locales_toast">Please configure multiple languages to enable toggle functionality</string>
 </resources>
