--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -114,7 +114,7 @@
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
     <string name="quick_settings_tiles_stock" translatable="false">
-        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,nfc,location,hotspot,inversion,saver,dark,work,cast,night,screenrecord,reverse,ambient_display,aod,caffeine,compasscpuinfo,dataswitch,heads_up,fpsinfo,mono,music,screenshot,soundsearch,sound,sleepscreen,reboot,sync,usb_tether,volume_panel
+        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,nfc,location,hotspot,inversion,saver,dark,work,cast,night,screenrecord,reverse,ambient_display,aod,caffeine,compasscpuinfo,dataswitch,heads_up,fpsinfo,mono,music,screenshot,soundsearch,sound,sleepscreen,reboot,sync,usb_tether,volume_panel,locale
     </string>
 
     <!-- The tiles to display in QuickSettings -->
