SystemUI: Smart Pixels [1/2]
Disables a percentage of pixels on screen to reduce power consumption.
If enabled with battery saver, don't scale brightness at 0.5f for UX.

Includes:
 - Option to enable on battery saver
 - User chosen grid
 - Burn-in protection

Configurable via overlay and disabled by defualt:
  "config_supportSmartPixels"

Change-Id: Id3c78548cb090ab2da11f543da31c5a408fb9fe9
Signed-off-by: Joe Maples <joe@frap129.org>
Signed-off-by: Adin Kwok <adin.kwok@carbonrom.org>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/spark_config.xml
+++ b/core/res/res/values/spark_config.xml
@@ -178,4 +178,6 @@
     <string name="config_SmartChargingSuspendValue" translatable="false">0</string>
     <string name="config_SmartChargingResumeValue" translatable="false">1</string>
 
+    <!-- Whether the device supports Smart Pixels -->
+    <bool name="config_supportSmartPixels">false</bool>
 </resources>
