--- a/core/res/res/values/spark_symbols.xml
+++ b/core/res/res/values/spark_symbols.xml
@@ -167,4 +167,6 @@
    <java-symbol type="string" name="config_SmartChargingSuspendValue" />
    <java-symbol type="string" name="config_SmartChargingResumeValue" />
 
+   <!-- Whether the device supports Smart Pixels -->
+   <java-symbol type="bool" name="config_supportSmartPixels" />
 </resources>
