--- a/packages/SystemUI/res/values/spark_strings.xml
+++ b/packages/SystemUI/res/values/spark_strings.xml
@@ -202,4 +202,7 @@
 
     <!-- CPUInfo tile -->
     <string name="quick_settings_cpuinfo_label">CPU Info</string>
+
+    <!-- SoundSearch Tile -->
+    <string name="quick_settings_sound_search">Sound search</string>
 </resources>
