--- a/packages/SystemUI/res/values/spark_symbols.xml
+++ b/packages/SystemUI/res/values/spark_symbols.xml
@@ -3,6 +3,6 @@
      Copyright (C) 2019-2022 Spark
      SPDX-License-Identifier: Apache-2.0
 -->
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
 </resources>
