--- a/core/res/res/values/spark_symbols.xml
+++ b/core/res/res/values/spark_symbols.xml
@@ -160,6 +160,10 @@
    <!-- Aerr -->
    <java-symbol type="id" name="aerr_disable" />
 
-   <!-- Smart charging battery percentage -->
+   <!-- Smart charging -->
    <java-symbol type="integer" name="config_smartChargingBatteryLevel" />
+   <java-symbol type="string" name="config_SmartChargingSysfsNode" />
+   <java-symbol type="string" name="config_SmartChargingSuspendValue" />
+   <java-symbol type="string" name="config_SmartChargingResumeValue" />
+
 </resources>
