--- a/core/res/res/values/spark_symbols.xml
+++ b/core/res/res/values/spark_symbols.xml
@@ -147,4 +147,6 @@
     <!-- Default UDFPS pressed icon -->
     <java-symbol type="integer" name="config_udfps_pressed_color" />
 
+   <!-- Ambient Pulse Light -->
+   <java-symbol type="integer" name="config_AmbientPulseLightColor" />
 </resources>
