Add Custom Spectrum Analog Clock
Thanks to mohancm
Thanks to ROGERdotT for thumbnail.
Change-Id: I6cca8ce309edd40cd2072f557778c95a28933ded

Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>
Signed-off-by: Sagarrokade006 <sagarrokade006@gmail.com>

--- a/packages/SystemUI/res/values/spark_strings.xml
+++ b/packages/SystemUI/res/values/spark_strings.xml
@@ -171,4 +171,8 @@
     <!-- Language toggle tile -->
     <string name="quick_settings_locale_label">Language</string>
     <string name="quick_settings_locale_more_locales_toast">Please configure multiple languages to enable toggle functionality</string>
+
+    <!-- Spectrum Analog clock -->
+    <string name="clock_title_spectrum" translatable="false">Spectrum</string>
+
 </resources>
