--- a/packages/SystemUI/res/values/spark_strings.xml
+++ b/packages/SystemUI/res/values/spark_strings.xml
@@ -177,4 +177,8 @@
 
     <!-- Dot Analog clock -->
     <string name="clock_title_dot" translatable="false">Dot</string>
+
+    <!-- Sneeky Analog clock -->
+    <string name="clock_title_sneeky" translatable="false">Sneeky</string>
+
 </resources>
