--- a/packages/SystemUI/res/values/spark_config.xml
+++ b/packages/SystemUI/res/values/spark_config.xml
@@ -30,4 +30,7 @@
 
     <!-- Doze: does the long press sensor need a proximity check? -->
     <bool name="doze_long_press_proximity_check">false</bool>
+
+    <!-- FPSInfoService FPS node file path -->
+    <string name="config_fpsInfoSysNode" translatable="false"></string>
 </resources>
