--- a/packages/SystemUI/res/values/spark_colors.xml
+++ b/packages/SystemUI/res/values/spark_colors.xml
@@ -15,5 +15,13 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    
+    <!-- HMMMMMMMMMMMMMMMMMM -->
     <color name="accent_device_default_light">@*android:color/accent_device_default_light</color>
+
+    <!-- Clear all notifications button -->
+    <color name="dismiss_all_background_color">@android:color/white</color>
+    <color name="dismiss_all_background_color_ripple">#a8a8a8</color>
+    <color name="dismiss_all_icon_color">#8a000000</color>
+
 </resources>
