--- a/packages/SystemUI/res/values/spark_dimens.xml
+++ b/packages/SystemUI/res/values/spark_dimens.xml
@@ -87,4 +87,13 @@
 
     <dimen name="op_qs_footer_height">98dp</dimen>
     <dimen name="op_qs_footer_action_layout_size">96dp</dimen>
+
+    <!-- Clear all notifications button -->
+    <dimen name="dismiss_all_button_elevation">10dp</dimen>
+    <dimen name="dismiss_all_button_height">55dp</dimen>
+    <dimen name="dismiss_all_button_margin_bottom">35dp</dimen>
+    <dimen name="dismiss_all_button_margin_top">30dp</dimen>
+    <dimen name="dismiss_all_button_width">55dp</dimen>
+    <dimen name="dismiss_all_fab_src_size">24dp</dimen>
+
 </resources>
