--- a/core/res/res/values/spark_symbols.xml
+++ b/core/res/res/values/spark_symbols.xml
@@ -119,4 +119,6 @@
 
   <!-- Ambient Pulse Light -->
   <java-symbol type="integer" name="config_AmbientPulseLightColor" />
+  <!-- Ambient notification light color -->
+  <java-symbol type="integer" name="config_ambientNotificationDefaultColor" />
 </resources>
