--- a/core/res/res/values/spark_strings.xml
+++ b/core/res/res/values/spark_strings.xml
@@ -64,4 +64,7 @@
     <!-- Settings Restart -->
     <string name="settings_restart_title">Settings restart required</string>
     <string name="settings_restart_message">For all changes to take effect, a Settings restart is required. Restart Settings now?</string>
+
+    <!-- Aerr strings -->
+    <string name="aerr_disable">Disable app</string>
 </resources>
