--- a/core/res/res/values/spark_symbols.xml
+++ b/core/res/res/values/spark_symbols.xml
@@ -156,4 +156,8 @@
    <!-- Settings Restart -->
    <java-symbol type="string" name="settings_restart_title" />
    <java-symbol type="string" name="settings_restart_message" />
+
+   <!-- Aerr -->
+   <java-symbol type="id" name="aerr_disable" />
+
 </resources>
