--- a/packages/SystemUI/res/values/spark_dimens.xml
+++ b/packages/SystemUI/res/values/spark_dimens.xml
@@ -88,4 +88,7 @@
     <dimen name="dismiss_all_button_width">55dp</dimen>
     <dimen name="dismiss_all_button_margin_bottom">48dp</dimen>
     <dimen name="dismiss_all_fab_src_size">24dp</dimen>
+
+    <!-- Screen Record -->
+    <dimen name="screenrecord_dot_size">48dp</dimen>
 </resources>
