--- a/packages/SystemUI/res/values/spark_strings.xml
+++ b/packages/SystemUI/res/values/spark_strings.xml
@@ -181,4 +181,6 @@
     <!-- Sneeky Analog clock -->
     <string name="clock_title_sneeky" translatable="false">Sneeky</string>
 
+    <!-- Data usage info -->
+    <string name="usage_data">used</string>
 </resources>
