SystemUI: allow to limit the max framerate of built-in screen recorder
Some devices seem to have problems when running the screen recorder at
native resolution @ max fps (I'm looking at you surya). The symptoms may
include severe lagging in the recording or stuff like crashes when
stopping in a landscape orientation. Allow limiting the recorder fps to
fix these issues.

Test: record screen on surya with config_screenRecorderMaxFramerate==90
while screen is running @ 120Hz, observe a smooth video. Stop the
recording while in full screen landscape youtube video, observe no crash

Signed-off-by: Kuba Wojciechowski <nullbytepl@gmail.com>
Change-Id: I361c7ae4bf74f2dd67b86e960f8d2d6ef63f5b8f

--- a/packages/SystemUI/res/values/spark_config.xml
+++ b/packages/SystemUI/res/values/spark_config.xml
@@ -45,4 +45,7 @@
 
     <!-- The CPUs to display in CPUInfoService view -->
     <string name="config_displayCpus" translatable="false"></string>
+
+    <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
+    <integer name="config_screenRecorderMaxFramerate">0</integer>
 </resources>
