SystemUI: Small rework on QS drag handle

--- a/packages/SystemUI/res/values-night/spark_colors.xml
+++ b/packages/SystemUI/res/values-night/spark_colors.xml
@@ -22,4 +22,7 @@
     <color name="dismiss_all_background_color_ripple">#555555</color>
     <color name="dismiss_all_icon_color">@android:color/white</color>
 
+    <!-- QS footer drag handle -->
+    <color name="ssos_qs_footer_drag_handle">#ff424242</color>
+
 </resources>
