--- a/packages/SystemUI/res/values/spark_dimens.xml
+++ b/packages/SystemUI/res/values/spark_dimens.xml
@@ -78,4 +78,9 @@
     <dimen name="tri_state_up_bottom_right_radius">0.0dip</dimen>
     <dimen name="tri_state_up_top_left_radius">24.0dip</dimen>
     <dimen name="tri_state_up_top_right_radius">24.0dip</dimen>
+
+    <!--Quick Settings-->
+    <dimen name="quick_settings_top_margin_media">4dp</dimen>
+    <dimen name="quick_settings_top_margin_media_extra">10dp</dimen>
+    <dimen name="qs_media_action_button_size">48dp</dimen>
 </resources>
