--- a/packages/SystemUI/res/values/spark_dimens.xml
+++ b/packages/SystemUI/res/values/spark_dimens.xml
@@ -100,4 +100,7 @@
 
     <!-- OmniWeather image size -->
     <dimen name="current_weather_image_size">30dp</dimen>
+
+    <!-- Maximum vertical offset of statusbar for burn-in protection -->
+    <dimen name="status_bar_offset_max_y">4dp</dimen>
 </resources>
