--- a/core/res/res/values/spark_symbols.xml
+++ b/core/res/res/values/spark_symbols.xml
@@ -150,7 +150,10 @@
     <!-- Vendor mismatch fingerprint warning -->
     <java-symbol type="string" name="system_error_vendorprint" />
 
-    <!-- Whether or not we should show vendor mismatch message -->
-    <java-symbol type="bool" name="config_show_vendor_mismatch_message" />
+   <!-- Whether or not we should show vendor mismatch message -->
+   <java-symbol type="bool" name="config_show_vendor_mismatch_message" />
 
+   <!-- Settings Restart -->
+   <java-symbol type="string" name="settings_restart_title" />
+   <java-symbol type="string" name="settings_restart_message" />
 </resources>
