BatteryService: Switch Warp charging status path to an overlay
* Allows to support both pre oplus and post oplus rebase paths
* Based on f557a85

--- a/core/res/res/values/spark_config.xml
+++ b/core/res/res/values/spark_config.xml
@@ -216,6 +216,9 @@
         <item>com.facebook.katana.LoginActivity</item>
     </string-array>
 
+    <!-- Paths to OP warp charging status file -->
+    <string name="config_opWarpChargerStatusPaths" translatable="false"></string>
+
     <!-- Whether device has dash charging support -->
     <bool name="config_hasDashCharger">false</bool>
 
