--- a/core/res/res/values-zh-rCN/spark_strings.xml
+++ b/core/res/res/values-zh-rCN/spark_strings.xml
@@ -5,13 +5,13 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <!-- LiveDisplay strings -->
-  <string name="live_display_auto">Automatic</string>
+  <string name="live_display_auto">自动</string>
   <string name="live_display_auto_summary">Automatically adjust color temperature of screen after sunset and sunrise</string>
   <string name="live_display_off">关闭</string>
   <string name="live_display_off_summary">Disable all adjustments</string>
-  <string name="live_display_day">Day</string>
+  <string name="live_display_day">白天</string>
   <string name="live_display_day_summary">Use day settings only</string>
-  <string name="live_display_night">Night</string>
+  <string name="live_display_night">夜晚</string>
   <string name="live_display_night_summary">Use night settings only</string>
   <string name="live_display_outdoor">Outdoor (bright sun)</string>
   <string name="live_display_outdoor_summary">Use outdoor settings only</string>
@@ -19,16 +19,16 @@
   <string name="accessibility_quick_settings_live_display_off">LiveDisplay off.</string>
   <string name="accessibility_quick_settings_live_display_auto">LiveDisplay: auto mode.</string>
   <string name="accessibility_quick_settings_live_display_day">LiveDisplay: day mode.</string>
-  <string name="accessibility_quick_settings_live_display_night">LiveDisplay: night mode.</string>
+  <string name="accessibility_quick_settings_live_display_night">LiveDisplay：夜间模式</string>
   <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay: outdoor mode.</string>
-  <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay turned off.</string>
+  <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay 已关闭。</string>
   <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay changed to auto mode.</string>
   <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay changed to day mode.</string>
   <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay changed to night mode.</string>
   <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay changed to outdoor mode.</string>
   <!-- AlertSlider modes -->
   <!-- SystemUI Restart -->
-  <string name="systemui_restart_title">SystemUI restart required</string>
+  <string name="systemui_restart_title">需要重启SystemUI</string>
   <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
   <!-- Button that copies the url to the log of a crashed application -->
   <string name="aerr_copy">复制崩溃日志链接</string>
@@ -61,5 +61,5 @@
   <string name="settings_restart_title">Settings restart required</string>
   <string name="settings_restart_message">For all changes to take effect, a Settings restart is required. Restart Settings now?</string>
   <!-- Aerr strings -->
-  <string name="aerr_disable">Disable app</string>
+  <string name="aerr_disable">禁用应用</string>
 </resources>
