--- a/packages/SystemUI/res/values-ru-rRU/spark_strings.xml
+++ b/packages/SystemUI/res/values-ru-rRU/spark_strings.xml
@@ -142,7 +142,7 @@
     <string name="accessibility_quick_settings_fpsinfo_off">Информация о FPS выкл.</string>
     <string name="accessibility_quick_settings_fpsinfo_on">Информация о FPS вкл.</string>
     <!-- FPS view text placeholder -->
-    <string name="fps_text_placeholder"><xliff:g id="fps" example="90">%1$d</xliff:g></string>
+    <string name="fps_text_placeholder">Fps: <xliff:g id="fps" example="90">%1$d</xliff:g></string>
     <!-- Navigation bar dpad -->
     <string name="accessibility_dpad_left">Курсор влево</string>
     <string name="accessibility_dpad_right">Курсор вправо</string>
