--- a/core/res/res/xml/audio_assets.xml
+++ b/core/res/res/xml/audio_assets.xml
@@ -22,15 +22,15 @@
 -->
 
 <audio_assets version="1.0">
-    <asset id="FX_KEY_CLICK" file="Effect_Tick.ogg"/>
-    <asset id="FX_FOCUS_NAVIGATION_UP" file="Effect_Tick.ogg"/>
-    <asset id="FX_FOCUS_NAVIGATION_DOWN" file="Effect_Tick.ogg"/>
-    <asset id="FX_FOCUS_NAVIGATION_LEFT" file="Effect_Tick.ogg"/>
-    <asset id="FX_FOCUS_NAVIGATION_RIGHT" file="Effect_Tick.ogg"/>
-    <asset id="FX_KEYPRESS_STANDARD" file="KeypressStandard.ogg"/>
-    <asset id="FX_KEYPRESS_SPACEBAR" file="KeypressSpacebar.ogg"/>
-    <asset id="FX_KEYPRESS_DELETE" file="KeypressDelete.ogg"/>
-    <asset id="FX_KEYPRESS_RETURN" file="KeypressReturn.ogg"/>
-    <asset id="FX_KEYPRESS_INVALID" file="KeypressInvalid.ogg"/>
-    <asset id="FX_BACK" file="Effect_Tick.ogg"/>
+    <asset id="FX_KEY_CLICK" file="Spark_Effect_Tick.ogg"/>
+    <asset id="FX_FOCUS_NAVIGATION_UP" file="Spark_Effect_Tick.ogg"/>
+    <asset id="FX_FOCUS_NAVIGATION_DOWN" file="Spark_Effect_Tick.ogg"/>
+    <asset id="FX_FOCUS_NAVIGATION_LEFT" file="Spark_Effect_Tick.ogg"/>
+    <asset id="FX_FOCUS_NAVIGATION_RIGHT" file="Spark_Effect_Tick.ogg"/>
+    <asset id="FX_KEYPRESS_STANDARD" file="SparkKeypressStandard.ogg"/>
+    <asset id="FX_KEYPRESS_SPACEBAR" file="SparkKeypressSpacebar.ogg"/>
+    <asset id="FX_KEYPRESS_DELETE" file="SparkKeypressDelete.ogg"/>
+    <asset id="FX_KEYPRESS_RETURN" file="SparkKeypressReturn.ogg"/>
+    <asset id="FX_KEYPRESS_INVALID" file="SparkKeypressInvalid.ogg"/>
+    <asset id="FX_BACK" file="Spark_Effect_Tick.ogg"/>
 </audio_assets>
